--- a/less/variables.less
+++ b/less/variables.less
@@ -70,24 +70,30 @@
 // -------
 // COLORS
   // typography
-    @text: hsl(151, 20%, 70%);
-    @bold: hsl(150, 15%, 65%);
-    @italic: hsl(151, 19%, 68%);
-    @link: hsl(57, 31%, 72%);
-    @active: darken(saturate(@link, 20%), 15%);
-    @hover: darken(saturate(@link, 20%), 25%);
-    @heading-12: hsl(160, 47%, 65%);
-    @heading-3456: hsl(150, 34%, 62%);
-    @mentioned: darken(@bold, 15%);
+    @text: hsl(160, 25%, 66%);
+    @bold: hsl(165, 20%, 65%);
+    @italic: hsl(165, 15%, 65%);
+    @strike: hsl(160, 10%, 50%);
+    @link: hsl(48, 50%, 75%);
+    @active: darken(saturate(@link, 5%), 10%);
+    @hover: darken(saturate(@link, 10%), 15%);
+    @heading-12: hsl(160, 60%, 60%);
+    @heading-3456: hsl(150, 41%, 53%);
+    @mentioned: hsl(160, 20%, 45%);
   // elements
-    @background: hsl(281, 46%, 14%);
-    @content: hsl(276, 93%, 5%); 
-    @contentshadow: hsl(283, 46%, 10%); 
-    @border: hsl(283, 64%, 9%);
+    @background: hsl(282, 46%, 14%);
+    @content: hsl(277, 92%, 5%); 
+    @contentshadow: hsl(284, 45%, 10%); 
+    @border: hsl(282, 65%, 9%);
 // ------
 // FONTS
     @font: {
-      body: 'EB Garamond', serif;
-      heading: 'Platypi', serif;
+      /*body: 'Source Serif 4', serif;
+      nav: 'EB Garamond', serif;
+      heading: 'Platypi', serif;*/
+      title: 'Fraunces', serif;
+      body: 'Eczar', serif;
+      head: 'Grenze Gotisch', serif;
+      nav: 'Texturtina', serif;
     }
 // -----
